# high-street-property-occupancy-tracking-MOTIP

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  optuna_tune.py  pyproject.toml  submit_and_evaluate.py  train.py
configs/: high_street_property_occupancy_tracking.yaml
data/: hspot.py  joint_dataset.py
log/: logger.py
scripts/: bootstrap_vm.sh
