[project]
name = "high-street-property-occupancy-tracking-motip"
version = "0.1.0"
description = "MOTIP-based high-street property occupancy tracking."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "accelerate>=1.1.0",
  "einops>=0.8.0",
  "matplotlib>=3.9.0",
  "mlflow>=2.18.0",
  "numpy>=1.26.0",
  "opencv-python>=4.10.0.84",
  "optuna>=4.1.0",
  "pandas>=2.2.0",
  "pillow>=10.4.0",
  "pycocotools>=2.0.8",
  "pyyaml>=6.0.2",
  "scikit-image>=0.24.0",
  "scipy>=1.13.0",
  "torch==2.4.0",
  "torchaudio==2.4.0",
  "torchvision==0.19.0",
  "tqdm>=4.67.0",
  "wandb>=0.19.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }

[tool.uv]
package = false
